<resources>
    <string name="app_name">Todo App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="delete">O\'chirish</string>
    <string name="log_out">Chiqish</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email address</string>
    <string name="welcome">Welcome</string>
    <string name="my_notes">My Notes</string>
    <string name="add_button">Add button</string>
    <string name="btn_menu">Menu button</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="created_at">Created at</string>
    <string name="updated_at">Updated at</string>
    <string name="sign_in">Sign in</string>
    <string name="muddat">Muddat</string>
    <string name="sarlavha">Sarlavha</string>
    <string name="batafsil">Batafsil</string>
    <string name="calendar">Calendar</string>
    <string name="saqlash">Saqlash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tahrirlash">Tahrirlash</string>
    <string name="bajarildi">Bajarildi</string>
    <string name="btnback">btnBack</string>
    <string name="bajarilganmi">Bajarilganmi</string>
</resources>