<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragments.SignInFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/my_font"
        android:text="@string/welcome"
        android:textColor="#D9DDCC"
        android:textSize="70sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/edt_style"
            android:fontFamily="@font/my_font"
            android:gravity="center"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="#D9DDCC"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="6dp"
            android:background="@drawable/edt_style"
            android:fontFamily="@font/my_font"
            android:gravity="center"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="#D9DDCC"
            android:textSize="22sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="6dp"
            android:backgroundTint="#2FAD64"
            android:fontFamily="@font/my_font"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:cornerRadius="50dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/my_font"
        android:padding="10dp"
        android:text="@string/register"
        android:textColor="#D9DDCC"
        android:textSize="22sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#66000000"
        android:padding="170dp" />
</RelativeLayout>