<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#1E2931"
    tools:context=".fragments.EditFragment">

    <EditText
        android:id="@+id/edtSarlavha"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/edt_style"
        android:fontFamily="@font/my_font"
        android:hint="@string/sarlavha"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="#D9DDCC"
        android:textSize="22sp" />

    <FrameLayout
        android:id="@+id/edtFocus"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="6dp"
        android:layout_weight="1"
        android:background="@drawable/edt_style_1">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <EditText
                android:id="@+id/edtBatafsil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/my_font"
                android:hint="@string/batafsil"
                android:textColor="@color/white"
                android:textColorHint="#D9DDCC"
                android:textSize="22sp" />
        </ScrollView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMuddat"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginVertical="6dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/edt_style"
            android:fontFamily="@font/my_font"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/muddat"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginVertical="6dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@android:color/transparent"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            android:clickable="true"
            app:cardCornerRadius="55dp"
            android:contentDescription="@string/calendar"
            android:focusable="true"
            android:foreground="?selectableItemBackground">

            <ImageView
                android:id="@+id/btnCalendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="12dp"
                android:src="@drawable/ic_calendar"
                tools:ignore="ContentDescription,UnusedAttribute" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <Switch
        android:id="@+id/mySwitch"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/edt_style"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="6dp"
        android:text="@string/bajarildi"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:thumb="@drawable/thump"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#6BA7D2"
        android:fontFamily="@font/my_font"
        android:text="@string/tahrirlash"
        android:textColor="#D6FFEA"
        android:textSize="22sp"
        app:cornerRadius="50dp" />
</LinearLayout>