<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/my_font"
            android:text="@string/welcome"
            android:textColor="#D9DDCC"
            android:textSize="70sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="6dp"
            android:background="@drawable/edt_style"
            android:fontFamily="@font/my_font"
            android:gravity="center"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="#D9DDCC"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="6dp"
            android:background="@drawable/edt_style"
            android:fontFamily="@font/my_font"
            android:gravity="center"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="#D9DDCC"
            android:textSize="22sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#2FAD64"
            android:fontFamily="@font/my_font"
            android:text="@string/sign_up"
            android:textColor="#D6FFEA"
            android:textSize="22sp"
            app:cornerRadius="50dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"
        android:padding="170dp"
        android:visibility="gone" />
</FrameLayout>